--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <div class="container-card border rounded">
 
             <div class="quiz-title border rounded">
-                <div class="div-title text-center  mb-3 mt-3">
-                    <span>შეკითხვა 1)</span>
+                <div class="row">
+                    <div class="div-title col-8 text-center mt-2 mb-2">
+                        <span>შეკითხვა 1</span>
+                    </div>
+                    <div class="div-title col-4 text-right mt-2 mb-2">
+                        <span class="mr-5">გურამ ჯიბლაძე</span>
+                    </div>
                 </div>
             </div>
 
@@ -35,13 +40,42 @@
                 <div class="question-amount ml-4">
                     <p class="font-weight-bolder">10 დან 5</p>
                 </div>
+                <div class="question ml-4">
+                    <div class="form-check mt-5">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1">
+                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        </label>
+                      </div>
+                      <div class="form-check mt-4">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1">
+                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        </label>
+                      </div>
+                      <div class="form-check mt-4">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1">
+                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        </label>
+                      </div>
+                      <div class="form-check mt-4">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1">
+                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        </label>
+                      </div>
+                </div>
+                <div class="button mt-5 text-center">
+                    <button type="button" class="btn btn-secondary btn-lg">შემდეგი შეკითხვა</button>
+                </div>
             </div>
 
-            <div class="quiz-footer">
-                <div class="div-footer">
-                    <!-- <div class="progress">
+            <div id="quiz-footer" class="quiz-footer border rounded">
+                <div class="div-footer pl-5 pr-5">
+                    <div class="progress m-3 ">
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
 
