--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             <div class="quiz-title border rounded">
                 <div class="row">
                     <div class="div-title col-8 text-center mt-2 mb-2">
-                        <span>შეკითხვა 1</span>
+                        <span class="text-monospace"><b>შ ე კ ი თ ხ ვ ა </b></span><span id="question-num" class="font-weight-bolder">1</span>
                     </div>
-                    <div class="div-title col-4 text-right mt-2 mb-2">
-                        <span class="mr-5">გურამ ჯიბლაძე</span>
+                    <div class="div-title col-4 text-right mt-2 mb-2 ">
+                        <div id="name" class="border rounded border-info text-center">
+                            <span class="mr-5 font-weight-bolder text-monospace">გურამ ჯიბლაძე</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -30,51 +32,60 @@
             <div class="quiz-body">
                 <div class="qvestions-time row mt-3">
                     <div class="question col-8 ">
-                        <p class="ml-4">შეკითხვა იქნება აქ! შეკითხვა იქნება აქ! შეკითხვა იქნება აქ! შეკითხვა იქნება აქ!</p>
+                        <p id="question-text" value="" class="ml-4 text-monospace">
+                        </p>
                     </div>
-                    <div class="time col-4 text-right">
-                        <span>დარჩენილი დრო: </span>
-                        <span class="font-weight-bolder mr-4"> 25:03</span>
+                    <div class="time col-4 text-right  ">
+                        <div class="time border rounded border-warning text-center">
+                            <span class="end-time">დარჩენილი დრო </span>
+                            <span class="font-weight-bolder "><u>25:03</u></span>
+                        </div>
                     </div>
                 </div>
                 <div class="question-amount ml-4">
-                    <p class="font-weight-bolder">10 დან 5</p>
+                    <p class="font-weight-bolder"><u><span>10</span> დან <span id="out-of"> </span></u></p>
                 </div>
                 <div class="question ml-4">
-                    <div class="form-check mt-5">
+                      <div class="form-check mt-5">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1">
-                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        <label id="answer-1" class="form-check-label" for="exampleRadios1">
+                            <!-- ვახტანგ მეექვსის -->
                         </label>
                       </div>
+                        <hr/>
                       <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1">
-                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
+                        <label id="answer-2" class="form-check-label" for="exampleRadios1">
+                            <!-- დავით აღმაშენებლის -->
                         </label>
                       </div>
+                      <hr/>
                       <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1">
-                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
+                        <label id="answer-3" class="form-check-label" for="exampleRadios1">
+                            <!-- ბაგრატ მეოთხის -->
                         </label>
                       </div>
+                      <hr/>
                       <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1">
-                            სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი სავარაუდო პასუხი
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
+                        <label id="answer-4" class="form-check-label" for="exampleRadios1">
+                            <!-- თამარ მეფის -->
                         </label>
                       </div>
                 </div>
                 <div class="button mt-5 text-center">
-                    <button type="button" class="btn btn-secondary btn-lg">შემდეგი შეკითხვა</button>
+                    <button id="button" type="button" class="btn btn-secondary btn-lg">შემდეგი შეკითხვა</button>
                 </div>
             </div>
 
             <div id="quiz-footer" class="quiz-footer border rounded">
                 <div class="div-footer pl-5 pr-5">
                     <div class="progress m-3 ">
-                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                        <div class="progress-bar" role="progressbar"  aria-valuenow="25"
+                         aria-valuemin="0" aria-valuemax="100">
+                           <!-- 25 % -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -90,7 +101,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
+    <script src="index.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
