--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="time col-4 text-right  ">
                         <div class="time border rounded border-warning text-center">
                             <span class="end-time">დარჩენილი დრო </span>
-                            <span class="font-weight-bolder "><u>25:03</u></span>
+                            <span id="time" class="font-weight-bolder "><u></u></span>
                         </div>
                     </div>
                 </div>
