--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="asset/style.css">
-    <title>Hello, world!</title>
+    <title>quiz</title>
   </head>
   <body>
     
@@ -47,29 +47,29 @@
                 </div>
                 <div class="question ml-4">
                       <div class="form-check mt-5">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label id="answer-1" class="form-check-label" for="exampleRadios1">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios0" value="0" >
+                        <label id="answer-1" class="form-check-label" for="0">
                             <!-- ვახტანგ მეექვსის -->
                         </label>
                       </div>
                         <hr/>
                       <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
-                        <label id="answer-2" class="form-check-label" for="exampleRadios1">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="1" >
+                        <label id="answer-2" class="form-check-label" for="1">
                             <!-- დავით აღმაშენებლის -->
                         </label>
                       </div>
                       <hr/>
                       <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
-                        <label id="answer-3" class="form-check-label" for="exampleRadios1">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="2" >
+                        <label id="answer-3" class="form-check-label" for="2">
                             <!-- ბაგრატ მეოთხის -->
                         </label>
                       </div>
                       <hr/>
                       <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
-                        <label id="answer-4" class="form-check-label" for="exampleRadios1">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="3" >
+                        <label id="answer-4" value="" class="form-check-label" for="3">
                             <!-- თამარ მეფის -->
                         </label>
                       </div>
