--- a/index.html
+++ b/index.html
@@ -45,35 +45,38 @@
                 <div class="question-amount ml-4">
                     <p class="font-weight-bolder"><u><span>10</span> დან <span id="out-of"> </span></u></p>
                 </div>
-                <div class="question ml-4">
-                      <div class="form-check mt-5">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios0" value="0" >
-                        <label id="answer-1" class="form-check-label" for="0">
-                            <!-- ვახტანგ მეექვსის -->
-                        </label>
-                      </div>
+                <form name="question" id="question">
+                    <div class="question ml-4">
+                        <div class="form-check mt-5">
+                          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios0" value="0" >
+                          <label id="answer-1" class="form-check-label" for="0">
+                              <!-- ვახტანგ მეექვსის -->
+                          </label>
+                        </div>
+                          <hr/>
+                        <div class="form-check mt-4">
+                          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="1" >
+                          <label id="answer-2" class="form-check-label" for="1">
+                              <!-- დავით აღმაშენებლის -->
+                          </label>
+                        </div>
                         <hr/>
-                      <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="1" >
-                        <label id="answer-2" class="form-check-label" for="1">
-                            <!-- დავით აღმაშენებლის -->
-                        </label>
-                      </div>
-                      <hr/>
-                      <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="2" >
-                        <label id="answer-3" class="form-check-label" for="2">
-                            <!-- ბაგრატ მეოთხის -->
-                        </label>
-                      </div>
-                      <hr/>
-                      <div class="form-check mt-4">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="3" >
-                        <label id="answer-4" value="" class="form-check-label" for="3">
-                            <!-- თამარ მეფის -->
-                        </label>
-                      </div>
-                </div>
+                        <div class="form-check mt-4">
+                          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="2" >
+                          <label id="answer-3" class="form-check-label" for="2">
+                              <!-- ბაგრატ მეოთხის -->
+                          </label>
+                        </div>
+                        <hr/>
+                        <div class="form-check mt-4">
+                          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="3" >
+                          <label id="answer-4" value="" class="form-check-label" for="3">
+                              <!-- თამარ მეფის -->
+                          </label>
+                        </div>
+                     </div>
+                </form>
+               
                 <div class="button mt-5 text-center">
                     <button id="button" type="button" class="btn btn-secondary btn-lg">შემდეგი შეკითხვა</button>
                 </div>
