--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="time-out-container-content border rounded">
             <div class="time-out-content">
                 <div class="user text-center border rounded bg-info mt-4">
-                    <p class="m-3 font-weight-bold bg-infor text-monospace ">გურამ ჯიბლაძე</p>
+                    <p id="user-time-out" class="m-3 font-weight-bold bg-infor text-monospace "></p>
                 </div>
                 <div class="corect-answer text-center border rounded  bg-danger ">
                     <p id="alert" class="m-3 font-weight-bold text-monospace"></p>
