--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
         <div class="container-card border rounded">
 
             <div class="quiz-title border rounded">
-                <div class="row">
-                    <div class="div-title col-8 text-center mt-2 mb-2">
-                        <span class="text-monospace"><b>შ ე კ ი თ ხ ვ ა </b></span><span id="question-num" class="font-weight-bolder">1</span>
-                    </div>
-                    <div class="div-title col-4 text-right mt-2 mb-2 ">
+                <div id="quiz-title" class="row">
+                    <div id="user1" class="div-title col-6 text-right mt-2 mb-2 ">
                         <div  class="border rounded border-info text-center">
-                            <span id="name-lastname" class="mr-5 font-weight-bolder text-monospace"></span>
+                            <span id="name-lastname" class=" font-weight-bolder text-monospace">ალექსანდრე ჯვარშეიშვილი</span>
+                        </div>
+                    </div>
+                    <div id="question1" class="div-title col-6 text-right mt-2 mb-2">
+                        <div class="content-div text-center">
+                            <span class="text-monospace "><b>შ ე კ ი თ ხ ვ ა </b></span><span id="question-num" class="font-weight-bolder">1</span>
                         </div>
                     </div>
                 </div>
