--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div id="question1" class="div-title col-6 text-right mt-2 mb-2">
                         <div class="content-div text-center">
-                            <span class="text-monospace "><b>შეკითხვა</b></span><span id="question-num" class="font-weight-bolder">1</span>
+                            <span class="text-monospace "><b>შეკითხვა </b></span><span id="question-num" class="font-weight-bolder">1</span>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                      </div>
                 </form>
                
-                <div class="button mt-5 text-center">
+                <div class="button text-center">
                     <button id="button" type="button" class="btn btn-secondary btn-lg">შემდეგი შეკითხვა</button>
                 </div>
             </div>
